# goit-pythonweb-hw-06

./: .gitignore  connect.py  docker-compose.yml  models.py  my_select.py  pyproject.toml  seed.py
migrations/versions/: 99b52a5bbafb_init.py
